--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   
-<img  class="imagen" src="/Web/Veamos.png" alt="Mi imagen">
+<img  class="imagen" src="Veamos.png" alt="Mi peueba">
   <div class="card1">
     <h2>Portico de Salomom</h2>
     <p>Camino de Fe</p>
